--- a/project_ws/src/aruco_planning/CMakeLists.txt
+++ b/project_ws/src/aruco_planning/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(inverse_kinematics)
+project(aruco_planning)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,9 +8,13 @@ project(inverse_kinematics)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  baxter_tools
   geometry_msgs
-  moveit_msgs
+  intera_interface
+  roscpp
   rospy
+  std_msgs
+  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
@@ -70,7 +74,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   geometry_msgs#   moveit_msgs
+#   geometry_msgs#   std_msgs
 # )
 
 ################################################
@@ -104,8 +108,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES ik
-#  CATKIN_DEPENDS geometry_msgs moveit_msgs rospy
+#  LIBRARIES aruco_planning
+#  CATKIN_DEPENDS baxter_tools geometry_msgs intera_interface roscpp rospy std_msgs tf2_ros
 #  DEPENDS system_lib
 )
 
@@ -122,7 +126,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/ik.cpp
+#   src/${PROJECT_NAME}/aruco_planning.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -133,7 +137,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/ik_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/aruco_planning_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -197,7 +201,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_ik.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_aruco_planning.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
